--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timer",
-  "homepage": "https://{ValFran99}.github.io/{session-timer}",
+  "homepage": "https://ValFran99.github.io/session-timer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
